<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:clickable="false"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".OrderCaller" >

    <TextView
        android:id="@+id/pick_com_txt"
        android:layout_width="214dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="18dp"
        android:gravity="center"
        android:text="@string/pick_com"
        android:textSize="@dimen/medium_text" />

    <LinearLayout
        android:id="@+id/commandButtons"
        android:layout_width="fill_parent"
        android:layout_height="90dp"
        android:gravity="top|center" >

        <Button
            android:id="@+id/music_prac"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="83dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:enabled="false"
            android:gravity="center"
            android:onClick="clickMusicPractice"
            android:text="@string/music_prac" />

        <Button
            android:id="@+id/cup_coffee"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="83dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:enabled="false"
            android:gravity="center"
            android:onClick="clickCoffee"
            android:text="@string/cup_coffee" />

        <Button
            android:id="@+id/homework_rev"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="94dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:enabled="false"
            android:gravity="center"
            android:onClick="clickHomework"
            android:text="@string/homework_rev" />

    </LinearLayout>

    <TextView
        android:id="@+id/rcv_com_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/rcv_com"
        android:textSize="@dimen/medium_text" />

    <LinearLayout
        android:id="@+id/receiveButtons"
        android:layout_width="fill_parent"
        android:layout_height="90dp"
        android:gravity="top|center" >

        <Button
            android:id="@+id/music_prac_rcv"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="83dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:enabled="false"
            android:gravity="center"
            android:onClick="clickMusicPracticeRcv"
            android:text="@string/music_prac" />

        <Button
            android:id="@+id/cup_coffee_rcv"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="83dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:enabled="false"
            android:gravity="center"
            android:onClick="clickCoffeeRcv"
            android:text="@string/cup_coffee" />

        <Button
            android:id="@+id/homework_rev_rcv"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="94dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:enabled="false"
            android:gravity="center"
            android:onClick="clickHomeworkRcv"
            android:text="@string/homework_rev" />

    </LinearLayout>

    <EditText
        android:id="@+id/log_view"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_gravity="top|center_vertical|fill_vertical|center_horizontal|fill_horizontal"
        android:layout_weight="1"
        android:ems="10"
        android:enabled="true"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:freezesText="true"
        android:gravity="center_vertical|center_horizontal|fill_horizontal"
        android:inputType="textMultiLine"
        android:longClickable="false"
        android:onClick="clickLogView"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbarStyle="insideOverlay"
        android:scrollbars="horizontal|vertical"
        android:selectAllOnFocus="false" />

</LinearLayout>